# SheetPilot

./: README.md  pyproject.toml  requirements.txt  setup.py  setup.sh
app/: __main__.py
app/core/: audit_logger.py  module_registry.py  orchestrator.py  user_management.py
app/gui/: __init__.py  config_window.py  import_window.py  login_dialog.py  main_window.py  report_window.py  user_management_dialog.py
cli/: __init__.py  cli.py
docs/: README.md
modules/: __init__.py
modules/file_parser/: __init__.py  parser.py
modules/missing_imputer/: __init__.py  imputer.py
modules/outlier_detector/: __init__.py  detector.py
modules/text_normalizer/: __init__.py  normalizer.py
plugins/: README.md  __init__.py
plugins/intelligent_text_normalizer/: README.md  __init__.py
tests/: test_file_parser.py  test_integration.py  test_intelligent_text_normalizer.py  test_missing_imputer.py  test_outlier_detector.py  test_text_normalizer.py  test_user_management.py
