[project]
name = "sheetpilot"
version = "1.0.0"
description = "Desktop AI spreadsheet assistant for automated data cleaning"
authors = [{name = "SheetPilot Team"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "lightgbm>=3.3.0",
    "PyQt5>=5.15.0",
    "nltk>=3.7",
    "openpyxl>=3.0.9",
    "click>=8.0.0",
    "transformers>=4.0.0", # For IntelligentTextNormalizer plugin
    "torch>=1.8.0",       # For IntelligentTextNormalizer plugin
    "bcrypt"              # For user password hashing
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0"
]

[project.scripts]
sheetpilot = "app.__main__:main"
sheetpilot-cli = "cli.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
